Revert "backdrop not covering actions menu bugfix [IT114]"
This reverts commit 418994490c638b78285b6209d8570aeb5dfe112a.

--- a/public_html/layouts/basic/styles/_Style.scss
+++ b/public_html/layouts/basic/styles/_Style.scss
@@ -2629,6 +2629,10 @@ html, body, .o-base-container {
 	background: #fff;
 }
 
+.modal-backdrop {
+	z-index: 1030;
+}
+
 .commonActionsContainer .badge {
 	font-size: 11px;
 	top: -3px;
